--- a/src/sass/components/icons/_icons.scss
+++ b/src/sass/components/icons/_icons.scss
@@ -23,7 +23,7 @@ $icon-2__font-size: $icon__font-size * 2 !default;
         font-style: normal;
         font-variant: $icon__font-weight;
         font-weight: normal;
-        text-decoration: inherit;
+        text-decoration: none;
         text-transform: none;
         speak: none;
         -webkit-font-smoothing: antialiased;
