--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -122,6 +122,10 @@
     @import 'components/info';
 
 
+    // *--------- TIMELINE ---------*
+    @import 'components/timeline';
+
+
 // ---------------------
 //     MODULES
 // ---------------------
