--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -21,10 +21,10 @@
         overflow-wrap: break-word;
     }
     &-link {
-        &,
-        &:link,
-        &:visited {
-            color: inherit;
+        text-decoration: none;
+        color: inherit;
+        &:hover {
+            text-decoration: underline;
         }
     }
     &-icon {
