--- a/src/templates/components/sections/_about-me.pug
+++ b/src/templates/components/sections/_about-me.pug
@@ -15,111 +15,11 @@ section(id="about-me" class="section about-me-wrapper")
                 p.section-header-description= data.mainWrapper.aboutMeWrapper.header.p
         .row.justify-content-center
             .col-6
-                figure.dev-face__wrapper
-                    img(src="../images/Mateusz-Archiciński_Front-End-Developer.jpg" alt=data.mainWrapper.aboutMeWrapper.devFace.imgAlt width="190" height="190" class="dev-face__img dev-face__img-rotate-28")
-                    figcaption.dev-face__img-caption
-                        span.dev-face__name= data.mainWrapper.aboutMeWrapper.devFace.name
-                        span.dev-face__profession= data.mainWrapper.aboutMeWrapper.devFace.profession
-                .about-me-section
-                    header.row.no-gutters.align-items-center.about-me-section-header
-                        span.icon.icon-15.icon-user.about-me-section-icon
-                        span.filling-line
-                        h3.heading.heading-4.text-center= data.mainWrapper.aboutMeWrapper.profile.h3
-                        span.filling-line.ending
-                    .about-me-section-body
-                        p.text-bolded.text-justify.paragraph.beginning= data.mainWrapper.aboutMeWrapper.profile.p[0]
-                        p.text-justify.paragraph= data.mainWrapper.aboutMeWrapper.profile.p[1]
-                        p.text-justify.paragraph.ending= data.mainWrapper.aboutMeWrapper.profile.p[2]
-                .about-me-section
-                    header.row.no-gutters.align-items-center.about-me-section-header
-                        span.icon.icon-15.icon-phone.about-me-section-icon
-                        span.filling-line
-                        h3.heading.heading-4.text-center
-                            | #{data.mainWrapper.aboutMeWrapper.informationContact.h3[0]}
-                            br
-                            | #{data.mainWrapper.aboutMeWrapper.informationContact.h3[1]}
-                        span.filling-line.ending
-                    .about-me-section-body
-                        ul.about-me-list
-                            li.info-block
-                                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.address.title}:
-                                .info-description
-                                    | #{data.mainWrapper.aboutMeWrapper.informationContact.address.description}
-                                    span(aria-hidden="true" class="icon icon-location color-accent-light info-icon")
-                            li.info-block
-                                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.birthDate.title}:
-                                info-description
-                                    | #{data.mainWrapper.aboutMeWrapper.informationContact.birthDate.description}
-                                    span(aria-hidden="true" class="icon icon-birthday color-accent-light info-icon")
-                            li.info-block
-                                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.email.title}:
-                                .info-description
-                                    a(href="mailto:" + data.mainWrapper.aboutMeWrapper.informationContact.email.link class="about-me-link")
-                                        | #{data.mainWrapper.aboutMeWrapper.informationContact.email.link}
-                                        span(aria-hidden="true" class="icon icon-mail-alt color-accent-light info-icon")
-                            li.info-block
-                                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.website.title}:
-                                .info-description
-                                    a(href=data.mainWrapper.aboutMeWrapper.informationContact.website.link class="about-me-link")
-                                        | #{data.mainWrapper.aboutMeWrapper.informationContact.website.link}
-                                        span(aria-hidden="true" class="icon icon-globe color-accent-light info-icon")
-                            li.info-block
-                                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.phone.title}:
-                                .info-description
-                                    a(href="tel:" + data.mainWrapper.aboutMeWrapper.informationContact.phone.link class="about-me-link")
-                                        | #{data.mainWrapper.aboutMeWrapper.informationContact.phone.link}
-                                        span(aria-hidden="true" class="icon icon-mobile color-accent-light info-icon")
-                .about-me-section
-                    header.row.no-gutters.align-items-center.about-me-section-header
-                        span.icon.icon-15.icon-lightbulb.about-me-section-icon
-                        span.filling-line
-                        h3.heading.heading-4.text-center
-                            | #{data.mainWrapper.aboutMeWrapper.attributesQualities.h3[0]}
-                            br
-                            | #{data.mainWrapper.aboutMeWrapper.attributesQualities.h3[1]}
-                        span.filling-line.ending
-                    .row.no-gutters.about-me-section-body.text-center
-                        ul(data-title="Jaki jestem ?" class="col-6 about-me-list about-me-list-titled")
-                            li Dokładny
-                            li Odpowiedzialny
-                            li Rzetelny
-                            li Samodzielny
-                            li Terminowy
-                        ul(data-title="W czym jestem dobry ?" class="col-6 about-me-list about-me-list-titled")
-                            li Dzielę się wiedzą
-                            li Potrafię szukać
-                            li Przyjmuję krytykę
-                            li Skupiam sie na celach
-                            li Współpracuję w zespole, komunikuję się
+                include _about-me-profile
+                include _about-me-information-contact
+                include _about-me-attributes-qualities
             .col-6
-                .about-me-section
-                    header.row.no-gutters.align-items-center.about-me-section-header
-                        span.icon.icon-15.icon-star.about-me-section-icon
-                        span.filling-line
-                        h3.heading.heading-4.text-center= data.mainWrapper.aboutMeWrapper.education.h3
-                        span.filling-line.ending
-                    .about-me-section-body
-                        p lorem ipsum
-                .about-me-section
-                    header.row.no-gutters.align-items-center.about-me-section-header
-                        span.icon.icon-15.icon-briefcase.about-me-section-icon
-                        span.filling-line
-                        h3.heading.heading-4.text-center
-                            | #{data.mainWrapper.aboutMeWrapper.experiencesCourses.h3[0]}
-                            br
-                            | #{data.mainWrapper.aboutMeWrapper.experiencesCourses.h3[1]}
-                        span.filling-line.ending
-                    .about-me-section-body
-                        p lorem ipsum
+                include _about-me-education
+                include _about-me-experiences-courses
             .col-8
-                .about-me-section
-                    header.row.no-gutters.align-items-center.about-me-section-header
-                        span.icon.icon-15.icon-desktop.about-me-section-icon
-                        span.filling-line
-                        h3.heading.heading-4.text-center
-                            | #{data.mainWrapper.aboutMeWrapper.skillsTechnologies.h3[0]}
-                            br
-                            | #{data.mainWrapper.aboutMeWrapper.skillsTechnologies.h3[1]}
-                        span.filling-line.ending
-                    .about-me-section-body
-                        p lorem ipsum
+                include _about-me-skills-technologies
