--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -126,6 +126,10 @@
     @import 'components/timeline';
 
 
+    // *--------- SKILLS ---------*
+    @import 'components/skills';
+
+
 // ---------------------
 //     MODULES
 // ---------------------
