--- a/src/templates/components/sections/_about-me-skills-technologies.pug
+++ b/src/templates/components/sections/_about-me-skills-technologies.pug
@@ -11,4 +11,62 @@
             | #{data.mainWrapper.aboutMeWrapper.skillsTechnologies.h3[1]}
         span.filling-line.ending
     .about-me-section-body
-        p lorem ipsum
+        p.paragraph.beginning.text-center= data.mainWrapper.aboutMeWrapper.skillsTechnologies.p
+        ul.row.align-content-center.align-items-center.justify-content-center.skills__list
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-html5 skills-1-skill-icon")
+                span.skills-1-skill-title HTML5
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-pug skills-1-skill-icon")
+                span.skills-1-skill-title Pug
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-json skills-1-skill-icon")
+                span.skills-1-skill-title JSON
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-css3 skills-1-skill-icon")
+                span.skills-1-skill-title CSS3
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-sass skills-1-skill-icon")
+                span.skills-1-skill-title Sass
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-bootstrap skills-1-skill-icon")
+                span.skills-1-skill-title Bootstrap
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-rwd skills-1-skill-icon")
+                span.skills-1-skill-title RWD
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-javascript skills-1-skill-icon")
+                span.skills-1-skill-title JavaScript
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-es6 skills-1-skill-icon")
+                span.skills-1-skill-title ES6
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-jquery skills-1-skill-icon")
+                span.skills-1-skill-title jQuery
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-angularjs skills-1-skill-icon")
+                span.skills-1-skill-title AngularJS
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-ajax skills-1-skill-icon")
+                span.skills-1-skill-title AJAX
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-nodejs skills-1-skill-icon")
+                span.skills-1-skill-title NodeJS
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-npm skills-1-skill-icon")
+                span.skills-1-skill-title NPM
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-bower skills-1-skill-icon")
+                span.skills-1-skill-title Bower
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-gulp skills-1-skill-icon")
+                span.skills-1-skill-title Gulp
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-wordpress skills-1-skill-icon")
+                span.skills-1-skill-title WordPress
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-git skills-1-skill-icon")
+                span.skills-1-skill-title Git
+            li.skills-1-skill
+                span(aria-hidden="true" class="icon-img icon-photoshop skills-1-skill-icon")
+                span.skills-1-skill-title Photoshop
