--- a/src/templates/components/sections/_services.pug
+++ b/src/templates/components/sections/_services.pug
@@ -13,3 +13,10 @@ section(id="services" class="section services-wrapper")
                     .heading-separator__square.primary
                     .heading-separator__line
                 p.section-header-description= data.mainWrapper.servicesWrapper.header.p
+        .row.no-gutters
+            .owl-carousel.owl-theme.owl-carousel-js
+                div Kodowanie PSD do HTML/CSS/JS
+                div Dostosowanie do urządzeń mobilnych
+                div Administracja stron internetowych
+                div Aplikacje SPA
+                div API
