--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1833,6 +1833,71 @@ html {
 .icon-wrench::before {
   content: '\e801'; }
 
+.icon-img {
+  width: 48px;
+  height: 48px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: inline-block; }
+
+.icon-html5 {
+  background-image: url(../images/skills-technologies/html5-logo.svg); }
+
+.icon-pug {
+  background-image: url(../images/skills-technologies/pug-logo.svg); }
+
+.icon-json {
+  background-image: url(../images/skills-technologies/json-logo.svg); }
+
+.icon-css3 {
+  background-image: url(../images/skills-technologies/css3-logo.svg); }
+
+.icon-sass {
+  background-image: url(../images/skills-technologies/sass-logo.svg); }
+
+.icon-bootstrap {
+  background-image: url(../images/skills-technologies/bootstrap-logo.svg); }
+
+.icon-rwd {
+  background-image: url(../images/skills-technologies/rwd-logo.svg); }
+
+.icon-javascript {
+  background-image: url(../images/skills-technologies/javascript-logo.svg); }
+
+.icon-es6 {
+  background-image: url(../images/skills-technologies/es6-logo.png); }
+
+.icon-jquery {
+  background-image: url(../images/skills-technologies/jquery-logo.svg); }
+
+.icon-angularjs {
+  background-image: url(../images/skills-technologies/angularjs-logo.svg); }
+
+.icon-ajax {
+  background-image: url(../images/skills-technologies/ajax-logo.svg); }
+
+.icon-nodejs {
+  background-image: url(../images/skills-technologies/nodejs-logo.svg); }
+
+.icon-npm {
+  background-image: url(../images/skills-technologies/npm-logo.svg); }
+
+.icon-bower {
+  background-image: url(../images/skills-technologies/bower-logo.svg); }
+
+.icon-gulp {
+  background-image: url(../images/skills-technologies/gulp-logo.svg); }
+
+.icon-wordpress {
+  background-image: url(../images/skills-technologies/wordpress-logo.svg); }
+
+.icon-git {
+  background-image: url(../images/skills-technologies/git-logo.svg); }
+
+.icon-photoshop {
+  background-image: url(../images/skills-technologies/photoshop-logo.svg); }
+
 a.link {
   transition: 0.25s color ease-in-out; }
   a.link, a.link:link, a.link:visited {
@@ -2039,6 +2104,9 @@ a.link, a.no-link {
       border-top: 40px solid #2196f3;
       border-bottom: 40px solid #2196f3; }
 
+.services-wrapper {
+  color: #f44336; }
+
 .heading-separator {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2186,7 +2254,7 @@ a.link, a.no-link {
     font-size: 1.05em; }
   .timeline-point-title {
     font-family: "Raleway";
-    font-size: 1.15em;
+    font-size: 1.1em;
     font-weight: 600; }
   .timeline-point-description, .timeline-point-period, .timeline-point-link {
     color: #757575; }
@@ -2201,6 +2269,34 @@ a.link, a.no-link {
       margin-top: -3px; }
     .timeline-point-period.ending, .timeline-point-title.ending, .timeline-point-description.ending, .timeline-point-link.ending {
       margin-bottom: 0; }
+
+.skills__list {
+  list-style: none; }
+
+.skills-1-skill {
+  padding: 15px;
+  -webkit-filter: grayscale(90%);
+          filter: grayscale(90%);
+  opacity: 0.75;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
+  filter: alpha(opacity=75);
+  transition: 0.3s opacity ease-in-out, 0.3s -webkit-filter ease-in-out;
+  transition: 0.3s filter ease-in-out, 0.3s opacity ease-in-out;
+  transition: 0.3s filter ease-in-out, 0.3s opacity ease-in-out, 0.3s -webkit-filter ease-in-out; }
+  .skills-1-skill:hover {
+    -webkit-filter: grayscale(0);
+            filter: grayscale(0);
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100); }
+  .skills-1-skill-icon {
+    margin: 0 auto; }
+  .skills-1-skill-title {
+    margin-top: 15px;
+    font-weight: 600;
+    text-align: center; }
+  .skills-1-skill-icon, .skills-1-skill-title {
+    display: block; }
 
 *,
 *::before,
@@ -2294,7 +2390,7 @@ body {
 .clearfix::after {
   clear: both; }
 
-.site-nav__list, .language-settings, .about-me-list, .timeline__list {
+.site-nav__list, .language-settings, .about-me-list, .timeline__list, .skills__list {
   padding: 0;
   margin: 0; }
 
