--- a/src/templates/components/sections/_about-me-profile.pug
+++ b/src/templates/components/sections/_about-me-profile.pug
@@ -2,7 +2,7 @@
     About Me ~ Profile
 
 figure.dev-face__wrapper
-    img(src="../images/Mateusz-Archiciński_Front-End-Developer.jpg" alt=data.mainWrapper.aboutMeWrapper.devFace.imgAlt width="190" height="190" class="dev-face__img dev-face__img-rotate-28")
+    img(src="images/Mateusz-Archiciński_Front-End-Developer.jpg" alt=data.mainWrapper.aboutMeWrapper.devFace.imgAlt width="190" height="190" class="dev-face__img dev-face__img-rotate-28")
     figcaption.dev-face__img-caption
         span.dev-face__name= data.mainWrapper.aboutMeWrapper.devFace.name
         span.dev-face__profession= data.mainWrapper.aboutMeWrapper.devFace.profession
