--- a/src/templates/components/sections/_portfolio.pug
+++ b/src/templates/components/sections/_portfolio.pug
@@ -13,3 +13,6 @@ section(id="portfolio" class="section portfolio-wrapper")
                     .heading-separator__square.primary
                     .heading-separator__line
                 p.section-header-description= data.mainWrapper.portfolioWrapper.header.p
+        .row
+            .col-12
+                .portfolio sads
