--- a/src/templates/components/sections/_services.pug
+++ b/src/templates/components/sections/_services.pug
@@ -13,10 +13,41 @@ section(id="services" class="section services-wrapper")
                     .heading-separator__square.primary
                     .heading-separator__line
                 p.section-header-description= data.mainWrapper.servicesWrapper.header.p
-        .row.no-gutters
-            .owl-carousel.owl-theme.owl-carousel-js
-                div Kodowanie PSD do HTML/CSS/JS
-                div Dostosowanie do urządzeń mobilnych
-                div Administracja stron internetowych
-                div Aplikacje SPA
-                div API
+        .row
+            .col-12
+                .owl-carousel.owl-theme.owl-carousel-services.owl-carousel-services-js
+                    .services-1-item
+                        span.icon.icon-5.icon-star.services-1-item-icon.text-center
+                        h3.heading.heading-4.services-1-item-title.text-center Kodowanie PSD do HTML/CSS/JS
+                        .heading-separator
+                            .heading-separator__line.heading-separator__line-bolded-3.services-1-item-heading-separator__line
+                        p.paragraph.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        button(type="button" class="btn to-top btn-primary-text services-1-item-button") Więcej
+                    .services-1-item
+                        span.icon.icon-5.icon-github.services-1-item-icon.text-center
+                        h3.heading.heading-4.services-1-item-title.text-center Kodowanie PSD do HTML/CSS/JS
+                        .heading-separator
+                            .heading-separator__line.heading-separator__line-bolded-3.services-1-item-heading-separator__line
+                        p.paragraph.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        button(type="button" class="btn to-top btn-primary-text services-1-item-button") Więcej
+                    .services-1-item
+                        span.icon.icon-5.icon-desktop.services-1-item-icon.text-center
+                        h3.heading.heading-4.services-1-item-title.text-center Kodowanie PSD do HTML/CSS/JS
+                        .heading-separator
+                            .heading-separator__line.heading-separator__line-bolded-3.services-1-item-heading-separator__line
+                        p.paragraph.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        button(type="button" class="btn to-top btn-primary-text services-1-item-button") Więcej
+                    .services-1-item
+                        span.icon.icon-5.icon-mobile.services-1-item-icon.text-center
+                        h3.heading.heading-4.services-1-item-title.text-center Kodowanie PSD do HTML/CSS/JS
+                        .heading-separator
+                            .heading-separator__line.heading-separator__line-bolded-3.services-1-item-heading-separator__line
+                        p.paragraph.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        button(type="button" class="btn to-top btn-primary-text services-1-item-button") Więcej
+                    .services-1-item
+                        span.icon.icon-5.icon-codepen.services-1-item-icon.text-center
+                        h3.heading.heading-4.services-1-item-title.text-center Kodowanie PSD do HTML/CSS/JS
+                        .heading-separator
+                            .heading-separator__line.heading-separator__line-bolded-3.services-1-item-heading-separator__line
+                        p.paragraph.text-justify Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        button(type="button" class="btn to-top btn-primary-text services-1-item-button") Więcej
