--- a/src/templates/components/sections/_home.pug
+++ b/src/templates/components/sections/_home.pug
@@ -12,7 +12,7 @@ section(id="home" class="section home-wrapper")
                     .heading-separator__line.accent
                 h3.heading.heading-3.white.text-center= data.mainWrapper.homeWrapper.h3
                 .home-header-buttons
-                    a(href="#aboutMe" class="btn to-top btn-accent")= data.mainWrapper.homeWrapper.buttons.aboutMe
-                    a(href="#services" class="btn to-top btn-primary-dark")= data.mainWrapper.homeWrapper.buttons.services
-            a(href="#about-me" aria-label=data.mainWrapper.homeWrapper.buttons.arrowBtnAriaLabel class="btn btn-round to-top")
+                    a(href="#aboutMe" class="btn to-top btn-accent color-white")= data.mainWrapper.homeWrapper.buttons.aboutMe
+                    a(href="#services" class="btn to-top btn-primary-dark color-white")= data.mainWrapper.homeWrapper.buttons.services
+            a(href="#about-me" aria-label=data.mainWrapper.homeWrapper.buttons.arrowBtnAriaLabel class="btn btn-round to-top color-white")
                 span(aria-hidden="true" class="icon icon-125 icon-down-open-1")
